--- a/ubun2_fe/src/index.css
+++ b/ubun2_fe/src/index.css
@@ -56,8 +56,8 @@
 }
 
 .main_shadow_header {
-  box-shadow: 3px 0 5px -2px rgba(0, 0, 0, 0.3), -2px 0 5px -2px rgba(0, 0, 0, 0.3);
-  border: 1px solid rgba(255, 255, 255, 0.18);
+  /* box-shadow: 3px 0 5px -2px rgba(0, 0, 0, 0.3), -2px 0 5px -2px rgba(0, 0, 0, 0.3); */
+  border: 1px solid rgba(255, 255, 255);
 }
 
 .main_shadow {
@@ -68,11 +68,11 @@
   background: rgba(255, 255, 255, 0.65);
   backdrop-filter: blur(20px);
   -webkit-backdrop-filter: blur(20px);
-  border: 1px solid rgba(255, 255, 255, 0.18);
+  border: 1px solid rgba(255, 255, 255);
 }
 
 .glass {
   background: rgba(255, 255, 255, 0.65);
   backdrop-filter: blur(20px);
-  border: 1px solid rgba(255, 255, 255, 0.18);
+  border: 1px solid rgba(255, 255, 255);
 }
