KAN-155 feat: 상품 전체 리스트 구현

--- a/ubun2_fe/src/index.css
+++ b/ubun2_fe/src/index.css
@@ -35,11 +35,12 @@
 }
 
 * {
-  font-family: 'Toss Product Sans';
+  font-family: 'Toss Product Sans', serif;
 }
 
 .mobile_container {
   position: relative;
+  min-width: 320px;
   max-width: 480px;
   margin: 0 auto;
   height: 100dvh;
