KAN-217 feat: logout api 연동

--- a/ubun2_fe/src/index.css
+++ b/ubun2_fe/src/index.css
@@ -5,6 +5,8 @@
 @tailwind components;
 @tailwind utilities;
 
+html { overscroll-behavior: none; }
+
 .loading-indicator:before {
   content: '';
   background: #00000080;
