KAN-266 fix: 이메일 인증 예외처리 프론트 변경

--- a/ubun2_fe/src/index.css
+++ b/ubun2_fe/src/index.css
@@ -452,3 +452,13 @@ p > strong::after {
   outline: none;
   box-shadow: none;
 }
+
+/* input password*/
+input[type=password]{
+  font-family: serif;
+}
+
+::placeholder {
+  font-family: 'Hyosung', sans-serif;
+  opacity: 1; /* Firefox */
+}
