--- a/ubun2_fe/src/index.css
+++ b/ubun2_fe/src/index.css
@@ -454,11 +454,67 @@ p > strong::after {
 }
 
 /* input password*/
-input[type=password]{
+input[type='password'] {
   font-family: serif;
 }
 
 ::placeholder {
   font-family: 'Hyosung', sans-serif;
   opacity: 1; /* Firefox */
+}
+
+/* LOADING */
+.loader-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.loader-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 4px;
+  width: 40px;
+  height: 40px;
+}
+
+.circle-loader {
+  width: 18px;
+  height: 18px;
+  background-color: #290386;
+  border-radius: 50%;
+  animation: fade 1.5s infinite ease-in-out;
+}
+
+.circle-loader:nth-child(1) {
+  animation-delay: 0s;
+}
+
+.circle-loader:nth-child(2) {
+  animation-delay: 0.2s;
+}
+
+.circle-loader:nth-child(3) {
+  animation-delay: 0.4s;
+}
+
+.circle-loader:nth-child(4) {
+  animation-delay: 0.6s;
+}
+
+@keyframes fade {
+  0%,
+  100% {
+    opacity: 0.2;
+  }
+  50% {
+    opacity: 1;
+  }
 }
